<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flashcards</string>
    <string name="action_settings">Settings</string>

    <!-- Login/Registration strings -->
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Tap here to register</string>
    <string name="login">Login</string>
    <string name="emailHint">mail@example.com</string>
    <string name="flashcardDescription">A flashcard</string>
    <string name="registrationForm">Registration Form</string>
    <string name="name">Name</string>
    <string name="screenName">Screen name</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="registerButton">Register</string>
    <string name="title_activity_menu">Menu</string>
    <string name="dummyNumber">9</string>
    <string name="createGroup">Create a group</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="dummyTitle">Dummy Question Title 1: </string>
    <string name="dummyQuestion">I have one megaphone. Am I better of converting it to one million phones,
        or one trillion microphones?</string>
    <string name="verifyAnswer">Verify answer</string>
    <string name="dummyHeaderTitle">Dummy header</string>
    <string name="title_activity_verification">VerificationActivity</string>
    <string name="extraInfo">Extra info:</string>
    <string name="dummyAnswer">Trick question, it all depends if you are the FBI or NSA, if you are the FBI, you want the microphones.
    In case you are the NSA, you will want the phones.</string>
    <string name="next">Next</string>
    <string name="feedback">Give feedback</string>
    <string name="editinfo">Submit edit</string>
    <string name="title_activity_settings">Settings</string>
    <string name="newpassword">New password</string>
    <string name="repeatnewPassword">Repeat new password</string>
    <string name="oldpassword">Old password</string>
    <string name="save">Save settings</string>
    <string name="title_activity_create_group">Create group</string>
    <string name="groupname">Group name</string>
    <string name="normalInvite">Normal user can invite friends</string>
    <string name="normalAddQuestion">Normal user can add questions</string>
    <string name="title_activity_group_settings">Group settings</string>
    <string name="saveGroup">Save group</string>
    <string name="question">Question</string>
    <string name="takePicture">Take picture</string>
    <string name="uploadPicture">Upload picture</string>
    <string name="answer">Answer</string>
    <string name="saveAnswer">Save question</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="dummyMessageHeader">Message from dummy</string>
    <string name="title_activity_read_message">ReadMessageActivity</string>
    <string name="postiveDummy">Postive</string>
    <string name="negativeDummy">Negative</string>
    <string name="dummyMessage">Hi, you have been invited to the group dummy dumdums</string>
    <string name="choice">Choose one</string>
    <string-array name="choices">
        <item>Invite a user to the group</item>
        <item>Manage the group/Add questions</item>
    </string-array>
    <string name="addInfo">Add info</string>


    <string name="errorQuestionAdd">An error occured adding a question</string>
    <string name="errorQuestionGet">An error occured fetching a question</string>
    <string name="errorUserAdd">An error occured adding an user</string>
    <string name="errorUserGet">An error occured fetching an user</string>
    <string name="errorGroupGet">An error occured fetching a group</string>
    <string name="errorGroupUpdate">An error occured updating a group</string>
    <string name="errorGroupAdd">An error occured adding a group</string>
    <string name="errorLogin">Could not find your email and password combination. Please try again</string>
    <string name="errorDatabase">Something went wrong connecting to the database, please try again later.</string>
    <string name="errorMessagesGet">An error occured requesting your messages</string>
    <string name="errorEmptyField">This field cannot be empty</string>

</resources>
