<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="wouter.vandamme.robbe.roels.flashcard.views.QuestionActivity"
    android:background="@drawable/wood_texture"
    android:gravity="center">

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/header_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!-- will contain the correct/wrong reply to the answer the user gave -->
        <TextView
            android:paddingTop="@dimen/title_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dummyHeaderTitle"
            android:id="@+id/responseTextView" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/flashcard"
            android:orientation="vertical"
            android:paddingLeft="@dimen/basic_medium_padding"
            android:paddingRight="@dimen/basic_medium_padding"
            android:minHeight="@dimen/questionHeight">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/extraInfo"
                android:id="@+id/extraInfoHeaderTextview"
                android:layout_gravity="center_horizontal" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/dummyAnswer"
                    android:id="@+id/extraInfoTextView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:id="@+id/feedbackButton"
                android:layout_gravity="left" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editinfo"
                android:id="@+id/extraInfoButton"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_gravity="right" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
