<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wood_texture"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/paper"
        android:paddingTop="@dimen/basic_high_padding"
        android:paddingLeft="@dimen/basic_medium_high_padding"
        android:paddingRight="@dimen/basic_medium_high_padding"
        >

        <TextView
            android:id="@+id/settingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/basic_medium_high_padding"
            android:text="@string/dummyMessageHeader"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/basic_medium_padding">

            <TextView
                android:id="@+id/Message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummyMessage"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginBottom="@dimen/basic_medium_padding" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

                <Button
                    android:id="@+id/positiveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postiveDummy"
                    android:layout_weight="1" />


                <!-- the text value of this button will change depending on what Activity is called -->
                <Button
                    android:id="@+id/negativeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/negativeDummy"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
