<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="wouter.vandamme.robbe.roels.flashcard.QuestionActivity"
    android:background="@drawable/wood_texture"
    android:gravity="center">

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/flashcard"
        android:orientation="vertical"
        android:paddingLeft="@dimen/basic_medium_padding"
        android:paddingRight="@dimen/basic_medium_padding"
        android:paddingTop="@dimen/basic_medium_padding"
        android:paddingBottom="@dimen/basic_medium_padding" >

        <TextView
            android:paddingTop="@dimen/title_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dummyTitle"
            android:id="@+id/textView3" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/questionHeight">

            <!-- Image view and textview "overlap" in code one of them must be hidden -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dummyQuestion"
                android:id="@+id/textView4" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4" />

        </FrameLayout>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
         >
            <requestFocus/>
        </EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/answer" />

    </LinearLayout>

    </LinearLayout>
</LinearLayout>

